examples/networking/ingress/ingress.yaml
# Copyright 2026 RustFS Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs-api
  namespace: rustfs-storage
spec:
  # Replace with an installed IngressClass.
  ingressClassName: traefik
  tls:
    - hosts: [s3.example.com]
      secretName: rustfs-edge-tls
  rules:
    - host: s3.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-io
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs-console
  namespace: rustfs-storage
spec:
  # Replace with an installed IngressClass.
  ingressClassName: traefik
  tls:
    - hosts: [console.example.com]
      secretName: rustfs-edge-tls
  rules:
    - host: console.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-console
                port:
                  number: 9001
